--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "start": "http-server -o client -p 3000"
+    "start": "nodemon server.js"
   },
   "repository": "git@github.com:Magdalena-Tarka/websocket-simple-chat-app.git",
   "author": "Magdalena Tarka <mxtarka@gmail.com>",
