--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "license": "MIT",
   "dependencies": {
     "express": "4.17.1",
-    "http-server": "^0.12.3"
+    "http-server": "^0.12.3",
+    "socket.io": "^2.2.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.12"
